appId: com.hariszaki17.swphris
---
- launchApp
- tapOn: "Email"
- inputText: "${EMAIL:-agent@swp.test}"
- tapOn: "Kata Sandi"
- inputText: "${PASSWORD:-password123}"
- tapOn: "Masuk"
- extendedWaitUntil:
    visible: "Kehadiran"
    timeout: 10000
- assertVisible: "Riwayat"
